--- a/app/src/main/res/layout/property_layout.xml
+++ b/app/src/main/res/layout/property_layout.xml
@@ -1,196 +1,205 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+        <variable
+            name="property_model_class_data"
+            type="com.example.project1.Property_model_class" />
+    </data>
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="30dp"
         app:cardElevation="50dp"
-        app:cardBackgroundColor="@color/teal_200"
-        >
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        >
-
+        app:cardBackgroundColor="@color/teal_200">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/teal_200"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp">
+
 
             <LinearLayout
-                android:layout_width="250dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:orientation="vertical">
+                android:background="@color/teal_200"
+                android:orientation="horizontal">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
-                    android:layout_marginTop="0dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginBottom="8dp"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/textView6"
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Phone no :"
-                        android:textSize="16dp"
-                        android:textStyle="bold"
-                        tools:layout_editor_absoluteX="10dp"
-                        tools:layout_editor_absoluteY="51dp" />
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginTop="0dp"
+                        android:layout_marginBottom="8dp"
+                        android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/phone_number"
+                        <TextView
+                            android:id="@+id/textView6"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Phone no :"
+                            android:textSize="16dp"
+                            android:textStyle="bold"
+                            tools:layout_editor_absoluteX="10dp"
+                            tools:layout_editor_absoluteY="51dp" />
+
+                        <TextView
+                            android:id="@+id/phone_number"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@{property_model_class_data.phone_number}" />
+                    </LinearLayout>
+
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="phone" />
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+
+                            android:id="@+id/textView3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Adress :"
+                            android:textSize="16dp"
+                            android:textStyle="bold"
+                            tools:layout_editor_absoluteX="10dp"
+                            tools:layout_editor_absoluteY="16dp" />
+
+                        <TextView
+                            android:id="@+id/adress"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="16dp"
+                            android:text="@{property_model_class_data.adress}"
+                            android:textSize="16dp"
+                            tools:layout_editor_absoluteX="76dp"
+                            tools:layout_editor_absoluteY="16dp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textView8"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Price :"
+                            android:textSize="16dp"
+                            android:textStyle="bold"
+                            tools:layout_editor_absoluteX="8dp"
+                            tools:layout_editor_absoluteY="87dp" />
+
+                        <TextView
+                            android:id="@+id/price"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="30dp"
+                            android:text="@{property_model_class_data.price}"
+                            tools:layout_editor_absoluteX="61dp"
+                            tools:layout_editor_absoluteY="89dp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textView9"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Details :"
+                            android:textStyle="bold"
+                            tools:layout_editor_absoluteX="8dp"
+                            tools:layout_editor_absoluteY="121dp" />
+
+                        <TextView
+                            android:id="@+id/details"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="24dp"
+                            android:text="@{property_model_class_data.details}"
+                            tools:layout_editor_absoluteX="69dp"
+                            tools:layout_editor_absoluteY="121dp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="8dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textView11"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Offered by :"
+                            android:textStyle="bold"
+                            tools:layout_editor_absoluteX="8dp"
+                            tools:layout_editor_absoluteY="152dp" />
+
+                        <TextView
+                            android:id="@+id/offered_by"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@{property_model_class_data.offeredby}" />
+                    </LinearLayout>
+
                 </LinearLayout>
 
-                <LinearLayout
+                <ImageView
+                    android:id="@+id/property_image"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginRight="8dp"
                     android:layout_marginBottom="8dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-
-                        android:id="@+id/textView3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Adress :"
-                        android:textSize="16dp"
-                        android:textStyle="bold"
-                        tools:layout_editor_absoluteX="10dp"
-                        tools:layout_editor_absoluteY="16dp" />
-
-                    <TextView
-                        android:id="@+id/adress"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="16dp"
-                        android:text="adress"
-                        android:textSize="16dp"
-                        tools:layout_editor_absoluteX="76dp"
-                        tools:layout_editor_absoluteY="16dp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginBottom="8dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/textView8"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Price :"
-                        android:textSize="16dp"
-                        android:textStyle="bold"
-                        tools:layout_editor_absoluteX="8dp"
-                        tools:layout_editor_absoluteY="87dp" />
-
-                    <TextView
-                        android:id="@+id/price"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="30dp"
-                        android:text="price"
-                        tools:layout_editor_absoluteX="61dp"
-                        tools:layout_editor_absoluteY="89dp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginBottom="8dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/textView9"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Details :"
-                        android:textStyle="bold"
-                        tools:layout_editor_absoluteX="8dp"
-                        tools:layout_editor_absoluteY="121dp" />
-
-                    <TextView
-                        android:id="@+id/details"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="24dp"
-                        android:text="details"
-                        tools:layout_editor_absoluteX="69dp"
-                        tools:layout_editor_absoluteY="121dp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/textView11"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Offered by :"
-                        android:textStyle="bold"
-                        tools:layout_editor_absoluteX="8dp"
-                        tools:layout_editor_absoluteY="152dp" />
-
-                    <TextView
-                        android:id="@+id/offered_by"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="id_name" />
-                </LinearLayout>
-
+                    android:layout_weight="1"
+                    android:loadImage="@{property_model_class_data.property_image}"
+                    tools:srcCompat="@tools:sample/avatars" />
             </LinearLayout>
 
             <ImageView
-                android:id="@+id/property_image"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginTop="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginBottom="8dp"
-                android:layout_weight="1"
-                tools:srcCompat="@tools:sample/avatars" />
+                android:id="@+id/goneimageview"
+                android:layout_width="102dp"
+                android:layout_height="87dp"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/ic_baseline_add_a_photo_24"
+                android:visibility="gone" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/blue_shade2"
+                android:gravity="center"
+                android:text="- - - - -"
+                android:textStyle="bold" />
+
+
         </LinearLayout>
-
-        <ImageView
-            android:id="@+id/goneimageview"
-            android:layout_width="102dp"
-            android:layout_height="87dp"
-            android:layout_gravity="center_horizontal"
-            android:src="@drawable/ic_baseline_add_a_photo_24"
-            android:visibility="gone" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/blue_shade2"
-            android:gravity="center"
-            android:text="- - - - -"
-            android:textStyle="bold" />
-
-
-</LinearLayout>
     </androidx.cardview.widget.CardView>
+</layout>
