applied success message on changing profile picture by declaring a interface implemeneted by the PropertyFragmentViewModel and written inside PropertyFragmentRepository that changes the success message live data variable. SMART. this time used another way of implementing interface in which we do not have to pass any context of the activity/fragmnet that implements it.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="83dp"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/images"
+        android:background="#65c3ba "
         app:menu="@menu/fragment_menu"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="675dp" />
