--- a/app/src/main/res/layout/property_layout.xml
+++ b/app/src/main/res/layout/property_layout.xml
@@ -13,37 +13,38 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="30dp"
+        app:cardCornerRadius="50dp"
         app:cardElevation="50dp"
-        app:cardBackgroundColor="@color/teal_200">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp">
-
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="20dp"
+        app:cardBackgroundColor="@color/cardview_light_background">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/teal_200"
-                android:orientation="horizontal">
+                android:layout_marginBottom="16dp"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/property_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:scaleType="centerCrop"
+                    android:layout_weight="1"
+                    android:loadImage="@{property_model_class_data.property_image}"
+                    tools:srcCompat="@tools:sample/avatars" />
 
                 <LinearLayout
-                    android:layout_width="250dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
                     android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
                     android:orientation="vertical">
 
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
+                        android:layout_marginLeft="12dp"
                         android:layout_marginTop="0dp"
                         android:layout_marginBottom="8dp"
                         android:orientation="horizontal">
@@ -68,7 +69,7 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
+                        android:layout_marginLeft="12dp"
                         android:layout_marginBottom="8dp"
                         android:orientation="horizontal">
 
@@ -97,7 +98,7 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
+                        android:layout_marginLeft="12dp"
                         android:layout_marginBottom="8dp"
                         android:orientation="horizontal">
 
@@ -124,7 +125,7 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
+                        android:layout_marginLeft="12dp"
                         android:layout_marginBottom="8dp"
                         android:orientation="horizontal">
 
@@ -150,7 +151,7 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
+                        android:layout_marginLeft="12dp"
                         android:orientation="horizontal">
 
                         <TextView
@@ -171,16 +172,6 @@
 
                 </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/property_image"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_weight="1"
-                    android:loadImage="@{property_model_class_data.property_image}"
-                    tools:srcCompat="@tools:sample/avatars" />
             </LinearLayout>
 
             <ImageView
@@ -191,15 +182,6 @@
                 android:src="@drawable/ic_baseline_add_a_photo_24"
                 android:visibility="gone" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/blue_shade2"
-                android:gravity="center"
-                android:text="- - - - -"
-                android:textStyle="bold" />
 
-
-        </LinearLayout>
     </androidx.cardview.widget.CardView>
 </layout>
