--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AddFragment"
-    android:background="@drawable/download"
-    >
+    android:background="@drawable/_0734561"
+    android:fillViewport="true">
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -18,13 +22,12 @@
         android:textColor="#FFFFFF"
         android:textSize="48dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/add_phone_no_textview_fragment"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.13"
-        tools:layout_editor_absoluteY="208dp" />
+        app:layout_constraintVertical_bias="0.543" />
 
     <EditText
         android:id="@+id/add_phone_no_textview_fragment"
@@ -36,10 +39,10 @@
         android:textColorHint="@color/white"
         android:textSize="24dp"
         android:textStyle="italic"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/add_adress_textview_fragment"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.268" />
+        app:layout_constraintVertical_bias="0.818" />
 
     <EditText
         android:id="@+id/add_adress_textview_fragment"
@@ -54,7 +57,7 @@
         app:layout_constraintBottom_toTopOf="@+id/add_details_textview_fragment"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.92" />
+        app:layout_constraintVertical_bias="0.882" />
 
     <EditText
         android:id="@+id/add_details_textview_fragment"
@@ -69,7 +72,7 @@
         app:layout_constraintBottom_toTopOf="@+id/add_price_textview_fragment"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.942" />
+        app:layout_constraintVertical_bias="0.913" />
 
     <EditText
         android:id="@+id/add_price_textview_fragment"
@@ -80,37 +83,50 @@
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:textSize="24dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/Add_image_view_button_fragment"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.594" />
+        app:layout_constraintVertical_bias="0.904" />
 
     <Button
         android:id="@+id/Add_property_button_fragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="28dp"
         android:text="SAVE"
         android:textSize="24dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/add_price_textview_fragment"
-        app:layout_constraintVertical_bias="0.792" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/Add_image_view_button_fragment"
-        android:layout_width="128dp"
-        android:layout_height="131dp"
-        android:layout_marginTop="4dp"
+        android:layout_width="108dp"
+        android:layout_height="106dp"
+        android:layout_marginBottom="32dp"
+        android:src="@drawable/ic_baseline_add_a_photo_24"
         app:layout_constraintBottom_toTopOf="@+id/Add_property_button_fragment"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/add_price_textview_fragment"
-        android:src="@drawable/ic_baseline_add_a_photo_24" />
+        app:layout_constraintHorizontal_bias="0.181"
+        app:layout_constraintStart_toStartOf="parent" />
 
+    <TextView
+        android:id="@+id/open_maps_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="52dp"
+        android:text="Click to add maps \nlocation"
+        android:textSize="16dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="@+id/Add_image_view_button_fragment"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.097"
+        app:layout_constraintStart_toEndOf="@+id/Add_image_view_button_fragment"
+        app:layout_constraintTop_toTopOf="@+id/Add_image_view_button_fragment"
+        app:layout_constraintVertical_bias="0.428" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
