--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -11,118 +11,128 @@
             name="viewmodel"
             type="com.example.project1.PropertyFragmentViewModel" />
     </data>
-
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".EditFragment"
+    android:background="@drawable/_0734561"
+    android:fillViewport="true">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".EditFragment"
-        android:background="@drawable/download">
+        android:layout_height="match_parent">
 
         <EditText
             android:id="@+id/editphoneno_fragment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="48dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginBottom="44dp"
             android:hint="edit phone no."
             android:text="@{viewmodel.dataForPropertyFragmentToEditFragment.phone_number}"
             android:textColor="@color/white"
             android:textSize="24dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.123"
+            app:layout_constraintBottom_toTopOf="@+id/editadress_fragment"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/titleofeditproperty_fragment" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.97" />
 
         <TextView
             android:id="@+id/titleofeditproperty_fragment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
             android:layout_marginTop="56dp"
             android:text="EDIT PROPERTY"
+            android:textColor="@color/white"
             android:textSize="48dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.492"
+            app:layout_constraintBottom_toTopOf="@+id/editphoneno_fragment"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.211" />
 
         <EditText
             android:id="@+id/editadress_fragment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="48dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginBottom="44dp"
             android:hint="edit adress"
             android:text="@{viewmodel.dataForPropertyFragmentToEditFragment.adress}"
             android:textColor="@color/white"
             android:textSize="24dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.108"
+            app:layout_constraintBottom_toTopOf="@+id/editdetails_fragment"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editphoneno_fragment" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
 
         <EditText
             android:id="@+id/editdetails_fragment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="48dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginBottom="47dp"
             android:hint="edit detials"
             android:text="@{viewmodel.dataForPropertyFragmentToEditFragment.details}"
             android:textColor="@color/white"
             android:textSize="24dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.108"
+            app:layout_constraintBottom_toTopOf="@+id/editprice_fragment"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editadress_fragment" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
 
         <EditText
             android:id="@+id/editprice_fragment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="48dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginBottom="4dp"
             android:hint="edit price"
             android:text="@{viewmodel.dataForPropertyFragmentToEditFragment.price}"
             android:textColor="@color/white"
             android:textSize="24dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.108"
+            app:layout_constraintBottom_toTopOf="@+id/editimage_fragment"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editdetails_fragment" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.925" />
 
         <ImageView
             android:id="@+id/editimage_fragment"
             android:layout_width="116dp"
             android:layout_height="93dp"
-            android:layout_marginTop="48dp"
-            android:src="@drawable/ic_baseline_add_a_photo_24"
+            android:layout_marginBottom="44dp"
             android:loadImage="@{viewmodel.dataForPropertyFragmentToEditFragment.property_image}"
+            android:src="@drawable/ic_baseline_add_a_photo_24"
+            app:layout_constraintBottom_toBottomOf="@+id/deletebutton_fragment"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.105"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editprice_fragment" />
+            app:layout_constraintHorizontal_bias="0.094"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <Button
             android:id="@+id/updatebutton_fragment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="36dp"
+            android:layout_marginBottom="56dp"
             android:text="UPDATE"
             android:textSize="24dp"
             app:layout_constraintBottom_toTopOf="@+id/deletebutton_fragment"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.338"
+            app:layout_constraintHorizontal_bias="0.403"
             app:layout_constraintStart_toEndOf="@+id/editimage_fragment" />
 
         <Button
             android:id="@+id/deletebutton_fragment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="40dp"
+            android:layout_marginBottom="32dp"
             android:text="DELETE "
             android:textSize="24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.349"
+            app:layout_constraintHorizontal_bias="0.409"
             app:layout_constraintStart_toEndOf="@+id/editimage_fragment" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
 </layout>
 
