--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -20,7 +20,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="50dp"
-    app:cardElevation="50dp">
+    app:cardElevation="50dp"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
+    android:layout_marginTop="20dp">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
